--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.1",
     "@nestjs/typeorm": "^11.0.0",
+    "argon2": "^0.44.0",
     "class-validator": "^0.14.2",
+    "crypto": "^1.0.1",
     "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
